components/etcd-shield/base/metrics/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etcd-shield-metrics
  namespace: etcd-shield
spec:
  selector:
    app: etcd-shield
  type: ClusterIP
  ports:
  - name: metrics
    targetPort: 9100
    port: 9100
